@@ -1,5 +1,9 @@
 2008-10-09  Scott Ellington <scott.ellington@gmail.com> 
 
+	* MapRenderer.cs: fix some bugs
+
+2008-10-09  Scott Ellington <scott.ellington@gmail.com> 
+
 	
 
 2008-10-09  Scott Ellington <scott.ellington@gmail.com> 
